--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -57,7 +57,7 @@ window#waybar.hidden {
 #network,
 #clock,
 #tray,
-#custom-media {
+#custom-media, #custom-lyrics {
   border-radius: 30px;
   margin: 15px 3px 0;
   padding: 6px 20px;
@@ -69,6 +69,11 @@ window#waybar.hidden {
 #custom-media {
   color: #1e1e2e;
   background-color: #cdd6f4;
+  margin: 0 3px 15px;
+}
+
+#custom-lyrics {
+  color: #ffffff;
   margin: 0 3px 15px;
 }
 
